[project]
name = "md-book-reader"
dynamic = ["version"]
description = "A generic terminal-based markdown book reader supporting mdBook, GitBook, Leanpub, and Bookdown formats"
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["markdown", "book", "reader", "terminal", "mdbook", "gitbook", "leanpub", "bookdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "markdown>=3.4.0",
    "pymdown-extensions>=9.0.0",
    "pygments>=2.14.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
toml = ["tomli>=2.0.0;python_version<'3.11'"]

[project.scripts]
md-book-reader = "book_reader:main"
md-book-writer = "book_writer:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "version.get_short_version"}
